@@ -10,7 +10,6 @@ Build-Depends: bcc,
                debhelper (>= 6.0.7~),
                docbook-xml,
                docbook-xsl,
-               dpatch,
                g++-multilib [amd64],
                gsoap,
                iasl,
@@ -46,6 +45,7 @@ Build-Depends: bcc,
                lynx-cur,
                python-central,
                python-dev (>= 2.4),
+               quilt (>= 0.46-7~),
                uuid-dev,
                x11proto-gl-dev,
                x11proto-xf86dri-dev,
