@@ -1,9 +1,0 @@
-01-build-arch.dpatch
-04-vboxdrv-references.dpatch
-06-xsession.dpatch
-07-vboxnetflt-reference.dpatch
-12-make-module.dpatch
-13-module-mismatch.dpatch
-16-no-update.dpatch
-18-system-xorg.dpatch
-22-no-static-libstdcpp.dpatch
