@@ -1,8 +1,6 @@
-#!/bin/sh /usr/share/dpatch/dpatch-run
-# Description: Correctly check build architecture.
-# Author: Michael Meskes <meskes@debian.org>
+Description: Correctly check build architecture.
+Author: Michael Meskes <meskes@debian.org>
 
-@DPATCH@
 diff -urNad virtualbox-ose-3.0.8-dfsg~/configure virtualbox-ose-3.0.8-dfsg/configure
 --- virtualbox-ose-3.0.8-dfsg~/configure	2009-10-07 11:27:13.000000000 +0200
 +++ virtualbox-ose-3.0.8-dfsg/configure	2009-10-07 13:41:49.012963906 +0200
