@@ -1,9 +1,7 @@
-#!/bin/sh /usr/share/dpatch/dpatch-run
-# Description: Change error messages for vboxdrv failure, according to
-#  virtualbox-ose-dkms.
-# Author: Daniel Hahler <ubuntu@thequod.de>
+Description: Change error messages for vboxdrv failure, according to
+ virtualbox-ose-dkms.
+Author: Daniel Hahler <ubuntu@thequod.de>
 
-@DPATCH@
 diff -urNad virtualbox-ose-3.1.0-dfsg~/src/VBox/VMM/VM.cpp virtualbox-ose-3.1.0-dfsg/src/VBox/VMM/VM.cpp
 --- virtualbox-ose-3.1.0-dfsg~/src/VBox/VMM/VM.cpp	2009-10-07 11:27:14.000000000 +0200
 +++ virtualbox-ose-3.1.0-dfsg/src/VBox/VMM/VM.cpp	2009-10-07 13:42:18.215472116 +0200
