@@ -1,8 +1,6 @@
-#!/bin/sh /usr/share/dpatch/dpatch-run
-# Description: Fix ARCH setting in modules Makefiles.
-# Author: Michael Meskes <meskes@debian.org>
+Description: Fix ARCH setting in modules Makefiles.
+Author: Michael Meskes <meskes@debian.org>
 
-@DPATCH@
 diff -urNad virtualbox-ose-3.0.8-dfsg~/src/VBox/Additions/linux/sharedfolders/Makefile.module virtualbox-ose-3.0.8-dfsg/src/VBox/Additions/linux/sharedfolders/Makefile.module
 --- virtualbox-ose-3.0.8-dfsg~/src/VBox/Additions/linux/sharedfolders/Makefile.module	2009-10-07 11:27:13.000000000 +0200
 +++ virtualbox-ose-3.0.8-dfsg/src/VBox/Additions/linux/sharedfolders/Makefile.module	2009-10-07 13:43:30.705472033 +0200
